<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (m)</string>
    <string name="bmi">BMI</string>
    <string name="status">Status</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="error_input">Input required</string>
</resources>
